--- a/client/src/styles/05-sidebar.css
+++ b/client/src/styles/05-sidebar.css
@@ -174,8 +174,9 @@
 
   .sidebar {
     transform: translateX(0);
-    position: sticky;
+    position: fixed;
     top: 0;
+    left: 0;
     height: 100vh;
     z-index: 50;
   }
@@ -184,24 +185,7 @@
     display: none;
   }
 
-  .gov-layout {
-    display: grid;
-    grid-template-columns: 270px 1fr;
-    grid-template-rows: auto 1fr auto;
-    min-height: 100vh;
-  }
-
-  .gov-layout > header {
-    grid-column: 1 / -1;
-  }
-
-  .gov-layout > .gov-main {
-    grid-column: 2;
-    grid-row: 2;
-    min-width: 0;
-  }
-
-  .gov-layout > footer {
-    grid-column: 1 / -1;
+  .gov-main {
+    margin-left: 270px;
   }
 }
